--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 -->
 <html>
 	<head>
-		<title>Spatial by TEMPLATED</title>
+		<title>Anti-Harassement</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="icon" href="images/reidius_logo.png">
 	</head>
 	<body class="landing">
 
 		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+			<header id="header">
+				<h1><strong><a href="index.html">Anti-Harassment</a></strong> by Reidius</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="button.html">Safety Button</a></li>
+						<li><a href="research.html">Research</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -29,10 +30,10 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Spatial</h2>
-				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
+				<h2>Reidius</h2>
+				<p>Safety is a big problem <br /> Reidius will help you feel safe</p>
 				<ul class="actions">
-					<li><a href="#" class="button special big">Get Started</a></li>
+					<li><a href="button.html" class="button special big">Get Started</a></li>
 				</ul>
 			</section>
 
@@ -42,13 +43,14 @@
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Maecenas luctus lectus</h2>
-									<p>Perspiciatis doloremque recusandae dolor</p>
+									<h2>Safety First</h2>
+									<p>Harassment is a big problem and needs to be stopped</p>
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ea mollitia corporis id, distinctio sunt veritatis officiis dolore reprehenderit deleniti voluptatibus harum magna, doloremque alias quisquam minus, eaque. Feugiat quod, nesciunt! Iste quos ipsam, iusto sit esse.</p>
-								<p>Dolorum aspernatur maxime libero ratione quidem distinctio, placeat fugiat laborum voluptatum enim neque soluta vel sunt id ex veritatis. Labore rerum, odit sapiente, alias mollitia magnam exercitationem modi amet earum quia atque ipsum voluptas asperiores quas laboriosam.</p>
+								<p>Internationally, studies show that between 70-99% of women (stat from Stop Street Harassment) experience street harassment at some point during their lives.</p>
+								<p>Forty-eight percent of surveyed middle and high school students said they were sexually harassed at least once, typically by their peers, during the 2010-2011 school year, according to a report released Monday by the American Association of University Women (AAUW), a group that advocates for gender equality in schools.
+                                </p>
 							</div>
 						</div>
 					</div>
@@ -58,27 +60,23 @@
 				<section id="two" class="wrapper style2 special">
 					<div class="container">
 						<header class="major">
-							<h2>Fusce ultrices fringilla</h2>
-							<p>Maecenas vitae tellus feugiat eleifend</p>
+							<h2>Research Data</h2>
+							<p>We have both primary and secondary research to show that harassment is a huge issue.</p>
 						</header>
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic02.jpg" alt="" />
-									<h3>Lorem ipsum dolor sit amet.</h3>
+									<img src="images/data_image2.png" alt="" height="250px"/>
+									<h3>Primary research that we conducted through a research sample.</h3>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic03.jpg" alt="" />
-									<h3>Illum, maiores tempora cupid?</h3>
+									<img src="images/data_graph.png" alt="" height="250px"/>
+									<h3>Secondary research that was conducted.</h3>
 								</div>
 							</div>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button special big">Nulla luctus</a></li>
-							<li><a href="#" class="button big">Sed vulputate</a></li>
-						</ul>
 					</div>
 				</section>
 
@@ -86,48 +84,44 @@
 				<section id="three" class="wrapper style1">
 					<div class="container">
 						<header class="major special">
-							<h2>Mauris vulputate dolor</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
+							<h2>Testimonials</h2>
+							<p>We conducted a study and received data about the safety of a random sample of the population.</p>
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/MinaPhoto.jpg" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
+										<h4>Mina Miraftab</h4>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
+									<p>As a girl in this day an age, I hear about different events that have occurred relating to harassment. It scares me to be alone at night and sometimes even during the day, due to what is happening.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/ShubhankarPhoto.jpg" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
+										<h4>Shubhankar Gaur</h4>
 									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
+									<p>Hearing reports about harassment in different areas in California, I feel as if I am not safe in any area. Last week, I finished working out at the gym, and as I was walking home, I kept on looking back with my flashlight, just to make sure I was safe. I really wish I would not have to worry about my own safety.</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/RithvickPhoto.jpg" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
+										<h4>Rithvick Agasty</h4>
 									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
+									<p>As a person with dry skin, I feel uncomfortable outside when I am walking. I hear rude, and unwelcoming comments from people when I walk. I wish I could walk out of those moments, and have someone who could help me”</p>
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
+								<div class="image rounded"><img src="images/ShreyaPhoto.jpg" alt="" /></div>
 								<div class="content">
 									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
+										<h4>Shreya Kasetty</h4>
 									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
+									<p>“One day, as I was walking in Oakland for a concert, I walked by a group of men who were saying inappropriate things about my body. I felt very scared, and did not have anyone to help me. This application has helped increase my insecurity when I walk outside now, in neighborhoods I used to feel were not safe.”</p>
 								</div>
 							</div>
 						</div>
@@ -138,12 +132,11 @@
 				<section id="four" class="wrapper style3 special">
 					<div class="container">
 						<header class="major">
-							<h2>Aenean elementum ligula</h2>
-							<p>Feugiat sed lorem ipsum magna</p>
+							<h2>About Us</h2>
+							<p>Reidius is a social computer application that aids individuals who feel unsafe, or uncomfortable while being outside. The application includes multiple features that help in situations of harassment or bullying. </p>
+                            <br>
+                            <p>When someone feels unsafe outside, they can press a button and notify the police.</p>
 						</header>
-						<ul class="actions">
-							<li><a href="#" class="button special big">Get in touch</a></li>
-						</ul>
 					</div>
 				</section>
 
@@ -156,9 +149,7 @@
 						<li><a href="#" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Reidius</li>
 					</ul>
 				</div>
 			</footer>
