--- a/research.html
+++ b/research.html
@@ -68,9 +68,8 @@ Street harassment often begins around puberty.</p>
 						<li><a href="#" class="icon fa-instagram"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Reidius</li>
+						
 					</ul>
 				</div>
 			</footer>
