Modified background color of banner

--- a/button.html
+++ b/button.html
@@ -75,7 +75,7 @@
                         function checkIfSafe(status) {
                             //if (status) {
                               
-                                Twilio.callAndSay("408-329-8470", "The user that has added you as an emergency contact on Reidius is not safe");
+                                Twilio.sendMessage("408-329-8470", "The user that has added you as an emergency contact on Reidius is not safe");
                             //}
                         }
                     </script>
