--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner" style="background-color:grey;">
 				<h2>Reidius</h2>
 				<p>Safety is a big problem <br /> Reidius will help you feel safe</p>
 				<ul class="actions">
@@ -129,7 +129,7 @@
 				</section>
 
 			<!-- Four -->
-				<section id="four" class="wrapper style3 special">
+				<section id="four" class="wrapper style3 special" style="background-color:grey;">
 					<div class="container">
 						<header class="major">
 							<h2>About Us</h2>
