--- a/button.html
+++ b/button.html
@@ -93,7 +93,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Reidius</li>
-						
+						<li>Made by Rohan Rodrigues and Aneesh Goel</li>
 					</ul>
 				</div>
 			</footer>
