--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Reidius</li>
+                        <li>Made by Rohan Rodrigues and Aneesh Goel</li>
 					</ul>
 				</div>
 			</footer>
