Modified button.html and index.html

--- a/button.html
+++ b/button.html
@@ -35,7 +35,7 @@
 
 					<header class="major special">
 						<h2>Safety Button</h2>
-						<p>When you're feeling unsafe press the unsafe button and hold the fingerprint button. If you release the fingerprint button in unsafe mode for more than 1 minute, the police will be contacted.</p>
+						<p>When you're feeling unsafe press the unsafe button and hold the fingerprint button. If you release the fingerprint button in unsafe mode for more than one minute, the police will be contacted.</p>
 					</header>      
                     
                     <div id="buttons" align="center" style="margin-bottom:30px">
