--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<section id="four" class="wrapper style3 special" style="background-color:grey;">
 					<div class="container">
 						<header class="major">
-							<h2>About Us</h2>
+							<h2>About Reidius</h2>
 							<p>Reidius is a social computer application that aids individuals who feel unsafe, or uncomfortable while being outside. The application includes multiple features that help in situations of harassment or bullying. </p>
                             <br>
                             <p>When someone feels unsafe outside, they can press a button and notify the police.</p>
