Added settings.js code

--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@ Street harassment often begins around puberty.</p>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Reidius</li>
-						<li>Made by Rohan Rodrigues and Aneesh Goel</li>
+						<li>Made by Rohan Rodrigues, Aneesh Goel, and Bhanu Garg</li>
 					</ul>
 				</div>
 			</footer>
