--- a/settings.html
+++ b/settings.html
@@ -70,7 +70,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Reidius</li>
-						<li>Made by Rohan Rodrigues and Aneesh Goel</li>
+						<li>Made by Rohan Rodrigues, Aneesh Goel, and Bhanu Garg</li>
 					</ul>
 				</div>
 			</footer>
