Modified index.html page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="wrapper style1">
+			<!--	<section id="three" class="wrapper style1">
 					<div class="container">
 						<header class="major special">
 							<h2>Testimonials</h2>
@@ -126,7 +126,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Four -->
 				<section id="four" class="wrapper style3 special" style="background-color:grey;">
